--- a/26.03.2022.md
+++ b/26.03.2022.md
@@ -1,4 +1,4 @@
 **The End!**
 
 Wir bedanken uns für die Treue über ein Jahr!
-Die Artikel sind unter https://davidcraftdev.github.io/demokratie-aktuell/ Archiviert
+Die Artikel sind unter https://github.com/DavidCraftDev/demokratie-aktuell/blob/main/README.md Archiviert
